# ConnwayGOL

./: CMakeLists.txt  ConwayGOL.sln  ConwayGOL.vcxproj  ConwayGOL.vcxproj.filters
include/: SDL_Handler.h  gameOfLife.h  variables.h
src/: SDL_Handler.c  gameOfLife.c  main.c
